Integrated Jacoco and added more unit tests.